autenticação jwt incluída
